--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3'
+#version: '3'
 
 #services:
 #  app:
@@ -12,14 +12,14 @@ version: '3'
 #      API_KEY: ${API_KEY}
 
 #docker run -p 8080:8080 --name mycontenedor -e DATABASE_URL=r2dbc:postgresql://ep-flat-silence-a44kj12l.us-east-1.aws.neon.tech:5432/service?sslmode=require -e DATABASE_USERNAME=service_owner -e DATABASE_PASSWORD=TXbO5YFWo6GI -e API_KEY=AIzaSyDO05skHcsky6fyKZMcQoH_40-rmEX9TpE diegoramos678/spring-reactive:latest
-services:
-  backend:
-    image: rejas281/frondend:latest
-    ports:
-      - "8080:8080"
-    environment:
-      DATABASE_URL: ${DATABASE_URL}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      API_KEY: ${API_KEY}
+#services:
+ # backend:
+ #   image: rejas281/frondend:latest
+ #   ports:
+   #   - "8080:8080"
+   # environment:
+   #   DATABASE_URL: ${DATABASE_URL}
+    #  DATABASE_USERNAME: ${DATABASE_USERNAME}
+     # DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+    #  API_KEY: ${API_KEY}
 
